# binja-lua

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  library.cpp  luascriptingprovider.cpp  luascriptingprovider.h
bindings/: architecture.cpp  basicblock.cpp  binaryview.cpp  callingconvention.cpp  common.cpp  common.h  datavariable.cpp  flowgraph.cpp  function.cpp  il.cpp  il.h  il_enums.inc  il_operand_conv.cpp  il_operands_table.inc  instruction.cpp  platform.cpp  section.cpp  selection.cpp  settings.cpp  sol_config.h  symbol.cpp  tag.cpp  types.cpp  variable.cpp  version.h
docs/: api-reference.md  api_definitions.yaml  api_definitions_extracted.yaml  building.md  extract_api.py  extract_lua_extensions.py  generate_docs.py  getting-started.md  lua-extensions.md  lua_extensions.yaml  versioning.md
lua-api/: collections.lua  fluent.lua  init.lua  utils.lua
scripts/: generate_il_tables.py
